Visualiztion of Mean Matrices, Trip Speeds and Regional vs. National DALYs

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -35,7 +35,7 @@ First we use NHTS to estimate mean walking and cycling times.
 
 #### Create a handful of functions to help parse data
 
-```{r parsely, eval = TRUE}
+```{r parsely, eval = FALSE}
 convertToHHS <- function(states){
   HHSRegions <- matrix(c("CT","ME","MA","NH","RI","VT","NJ","NY","DE","DC","MD","PA","VA","WV","AL","FL","GA","KY","MS","NC","SC","TN","IL","IN","MI","MN","OH","WI","AR","LA","NM","OK","TX","IA","KS","MO","NE","CO","MT","ND","SD","UT","WY","AZ","CA","HI","NV","AK","ID","OR","WA",1,1,1,1,1,1,2,2,3,3,3,3,3,3,4,4,4,4,4,4,4,4,5,5,5,5,5,5,6,6,6,6,6,7,7,7,7,8,8,8,8,8,8,9,9,9,9,10,10,10,10,"HHS1","HHS1","HHS1","HHS1","HHS1","HHS1","HHS2","HHS2","HHS3","HHS3","HHS3","HHS3","HHS3","HHS3","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS5","HHS5","HHS5","HHS5","HHS5","HHS5","HHS6","HHS6","HHS6","HHS6","HHS6","HHS7","HHS7","HHS7","HHS7","HHS8","HHS8","HHS8","HHS8","HHS8","HHS8","HHS9","HHS9","HHS9","HHS9","HHS10","HHS10","HHS10","HHS10"), nrow = 51, ncol = 3)
   StateToHHS <- HHSRegions[,3]
@@ -61,7 +61,7 @@ return(foo[,c("M","F")])
 
 #### Read Two of the Four NHTS Data Tables
 
-```{r NHTS, eval = TRUE}
+```{r NHTS, eval = FALSE}
 DAYV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/DAYV2PUB.CSV", na.strings = c("-9","-8", "-7", "-1"))
 names(DAYV2PUB) <- c("HOUSEID","PERSONID","FRSTHM","OUTOFTWN","ONTD_P1","ONTD_P2","ONTD_P3","ONTD_P4","ONTD_P5","ONTD_P6","ONTD_P7","ONTD_P8","ONTD_P9","ONTD_P10","ONTD_P11","ONTD_P12","ONTD_P13","ONTD_P14","ONTD_P15","TDCASEID","HH_HISP","HH_RACE","DRIVER","R_SEX","WORKER","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","LIF_CYC","TRIPPURP","AWAYHOME","CDIVMSAR","CENSUS_D","CENSUS_R","DROP_PRK","DRVR_FLG","EDUC","ENDTIME","HH_ONTD","HHMEMDRV","HHRESP","HHSTATE","HHSTFIPS","INTSTATE","MSACAT","MSASIZE","NONHHCNT","NUMONTRP","PAYTOLL","PRMACT","PROXY","PSGR_FLG","R_AGE","RAIL","STRTTIME","TRACC1","TRACC2","TRACC3","TRACC4","TRACC5","TRACCTM","TRAVDAY","TREGR1","TREGR2","TREGR3","TREGR4","TREGR5","TREGRTM","TRPACCMP","TRPHHACC","TRPHHVEH","TRPTRANS","TRVL_MIN","TRVLCMIN","TRWAITTM","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","VEHID","WHODROVE","WHYFROM","WHYTO","WHYTRP1S","WRKCOUNT","DWELTIME","WHYTRP90","TDTRPNUM","TDWKND","TDAYDATE","TRPMILES","WTTRDFIN","VMT_MILE","PUBTRANS","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","GASPRICE","VEHTYPE","HH_CBSA","HHC_MSA")
 
@@ -108,14 +108,14 @@ saveRDS(NHTS.trips, file = "./data/NHTS.trips.rds")
 saveRDS(NHTS.person, file = "./data/NHTS.person.rds")
 ```
 
-```{r loadData, eval = TRUE}
+```{r loadData, eval = FALSE}
 NHTS.person <- readRDS(file = "./data/NHTS.person.rds")
 NHTS.trips <- readRDS(file = "./data/NHTS.trips.rds")
 ```
 
 #### Investigate Trip Data
 
-```{r summary, fig.width = 15, eval = TRUE}
+```{r summary, fig.width = 20, fig.height = 10, eval = TRUE}
 summary(with(subset(NHTS.trips, AT == "walk"), TRPMILES))
 summary(with(subset(NHTS.trips, AT == "cycle"), TRPMILES))
 summary(with(subset(NHTS.trips, AT == "other"), TRPMILES))
@@ -124,20 +124,21 @@ summary(with(subset(NHTS.trips, AT == "cycle"), TRVLCMIN))
 summary(with(subset(NHTS.trips, AT == "other"), TRVLCMIN))
 
 
+
 walkHours <- with(subset(NHTS.trips, {
-    AT == "walk" #& TRVLCMIN > 5 & TRPMILES > 2/9
+    AT == "walk" & TRPMILES < 10 & TRPMILES/TRVLCMIN*60 < 8 & TRVLCMIN > 5 #& TRPMILES/TRVLCMIN*60 > 0.5
 }), TRVLCMIN/60)
 
 walkMiles <- with(subset(NHTS.trips, {
-    AT == "walk" #& TRVLCMIN > 5 & TRPMILES > 2/9
+    AT == "walk" & TRPMILES < 10 & TRPMILES/TRVLCMIN*60 < 8 & TRVLCMIN > 5 #& TRPMILES/TRVLCMIN*60 > 0.5
 }), TRPMILES)
 
 cycleHours <- with(subset(NHTS.trips, {
-      AT == "cycle" #& TRVLCMIN > 5 & TRPMILES > 2/9
+      AT == "cycle" & TRPMILES < 25 & TRPMILES/TRVLCMIN*60 < 25 & TRVLCMIN > 5 #& TRPMILES/TRVLCMIN*60 > 1
 }), TRVLCMIN/60)
 
 cycleMiles <- with(subset(NHTS.trips, {
-      AT == "cycle" #& TRVLCMIN > 5 & TRPMILES > 2/9
+      AT == "cycle" & TRPMILES < 25 & TRPMILES/TRVLCMIN*60 < 25 & TRVLCMIN > 5 #& TRPMILES/TRVLCMIN*60 > 1
 }), TRPMILES)
 
 walkSpeed <- median(walkMiles/walkHours, na.rm = TRUE)
@@ -145,6 +146,7 @@ cycleSpeed <- median(cycleMiles/cycleHours, na.rm = TRUE)
 
 Dwalk <- data.frame(Hours = walkHours, Miles = walkMiles, Speed = walkMiles/walkHours, mode = "walk")
 Dcycle <- data.frame(Hours = cycleHours, Miles = cycleMiles, Speed = cycleMiles/cycleHours, mode = "cycle")
+
 D <- rbind(Dwalk,Dcycle)
 
 Dspeed <- data.frame(speed = c(1,1), intercept = log10(c(walkSpeed,cycleSpeed)), mode = c("walk","cycle"))
@@ -154,27 +156,28 @@ g <- g + geom_abline(aes(slope = speed, intercept = intercept, colour = mode), D
 g + scale_y_log10() + scale_x_log10() + theme_bw()
 
 
-g <- ggplot(D, aes(log10(Speed), ..density.., fill = mode)) + geom_histogram(bins = 25) + facet_grid(. ~ mode)
+g <- ggplot(D, aes(Speed, ..density.., fill = mode)) + geom_histogram(breaks = seq(0,25,1)) + theme_bw() + scale_x_continuous(name="Speed") + scale_y_continuous(name="Density") + facet_grid(. ~ mode)
 g
 
 ```
 
 #### Subset and Merge
 
-```{r subset, eval = TRUE}
+```{r subset, eval = TRUE, fig.width = 10}
 NHTS.person <- subset( NHTS.person, MSA == TRUE )
 NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"))
+barplot(with(NHTS,table(HHS)))
 ```
 
 #### Split into strata by region
 
-```{r split, eval = TRUE}
+```{r split, eval = FALSE}
 listOfLists <- lapply(split(NHTS, NHTS$HHS),function(x) lapply(split(x, x$SEX), function(x) split(x, x$AGE)))
 ```
 
 #### Compute Mean Trip Lengths
 
-```{r count, eval = TRUE}
+```{r count, eval = FALSE}
 counts <- lapply(listOfLists, function(x) lapply(x, function(x) lapply(x, countPeople)))
 walkLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "walk")))
 cycleLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "cycle")))
@@ -199,7 +202,7 @@ The data files in ~/Box Sync/work/CoBenefits/MaggieShare/VitalStats/CDCwonder/.
 
 #### Query Results File (HHSmetro_Age_sex_2010-14.csv)
 
-```{r CDC, eval = TRUE}
+```{r CDC, eval = FALSE}
 wonder <- read.csv("./../data/CDCwonder/HHSmetro_Age_sex_2010-14.csv", header=T)
 names(wonder) <- c("HHSRegion", "HHSRegionCode", "gender", "genderCode","WONDERage","WONDERageCode","ICD10",  "ICD10Code", "deaths5yr", "population5yr", "crudeRate")
 
@@ -209,12 +212,12 @@ wonder <- subset(wonder, WONDERageCode != "NS") # remove 'Not stated' Age entrie
 The following two recoding chunks should probably be redone.  They
 depend on the ordering of the factors which seems dangerous.
 
-```{r ITHIMCause, eval = TRUE}
+```{r ITHIMCause, eval = FALSE}
 ITHIMcauseKey <- c("ColonCancer","LungCancer","BreastCancer","Diabetes","Dementia","IHD","InflammatoryHD","InflammatoryHD","HHD","Stroke","AcuteRespInfections","AcuteRespInfections","RespiratoryDisease","RespiratoryDisease","RTIs","RTIs")
 names(ITHIMcauseKey) <- unique(wonder$ICD10)
 wonder$ITHIMcause <- ITHIMcauseKey[as.character(wonder$ICD10)]
 ```
-```{r recodeAge, eval = TRUE}
+```{r recodeAge, eval = FALSE}
 ITHIMageKey <- c("ageClass1", "ageClass1", "ageClass2", "ageClass2", "ageClass3", "ageClass3", "ageClass3", "ageClass4", "ageClass4", "ageClass4", "ageClass5", "ageClass5", "ageClass5", "ageClass6", "ageClass6", "ageClass7", "ageClass7", "ageClass8", "ageClass8","ageClass8", "ageClass8", "ageClass8")
 names(ITHIMageKey) <- unique(wonder$WONDERage)
 wonder$ITHIMage <- ITHIMageKey[as.character(wonder$WONDERage)]
@@ -222,7 +225,7 @@ wonder$ITHIMage <- ITHIMageKey[as.character(wonder$WONDERage)]
 
 Depression was not in the WONDER data, since there are no deaths, have to add it manually.
 
-```{r wonder, eval = TRUE}
+```{r wonder, eval = FALSE}
 wonder <- wonder[, c("HHSRegionCode","gender","ITHIMage","ITHIMcause","deaths5yr","population5yr")]
 depress <- expand.grid(HHSRegionCode=unique(wonder$HHSRegionCode), gender=unique(wonder$gender),ITHIMage = unique(wonder$ITHIMage), ITHIMcause = "Depression", deaths5yr = "0", population5yr = "0", stringsAsFactors=T)
 wonder <- rbind(wonder, depress)
@@ -230,7 +233,7 @@ wonder <- rbind(wonder, depress)
 
 Replace suppressed values with random number 1-9
 
-```{r suppressed, eval = TRUE}
+```{r suppressed, eval = FALSE}
 wonder <- within( wonder, {
     newDeaths <- as.numeric(ifelse(deaths5yr == "Suppressed", sample(0:9), as.numeric(as.character(deaths5yr))))
     })
@@ -238,7 +241,7 @@ wonder <- within( wonder, {
 
 10 HHS x 2 sex x 8 age x 13 disease = 2,080 strata.
 
-```{r summary2, eval = TRUE}
+```{r summary2, eval = FALSE}
 wonderSummary <- ddply(wonder, .(HHSRegionCode, gender, ITHIMage, ITHIMcause), summarise,
                        numberOfDeaths5yr = sum(as.numeric(as.character(newDeaths)), na.rm=T)
 )
@@ -250,7 +253,7 @@ Read in data for single year population.  Processed in Excel, to
 combine two WONDER queries, need to go back and script the processing
 of the raw WONDER output
 
-```{r singleyear, eval = TRUE}
+```{r singleyear, eval = FALSE}
 pop14 <- read.csv("./../data/CDCwonder/HHSmetro_Age_sex_2014_AllCause.csv", header=T)
 
 
@@ -258,13 +261,13 @@ names(pop14) <- c("HHSRegion", "HHSRegionCode","gender", "genderCode","WONDERage
 ```
 This is delicate(read sloppy), really need to check the order of age groups returned by the 'unique(pop14$WONDERage)' command.
 
-```{r sloppy, eval = TRUE}
+```{r sloppy, eval = FALSE}
 ITHIMageKey2 <- c("ageClass8", "ageClass1", "ageClass7", "ageClass7", "ageClass6", "ageClass6", "ageClass1", "ageClass5", "ageClass5","ageClass5","ageClass4", "ageClass3", "ageClass4", "ageClass2", "ageClass2", "ageClass3", "ageClass4", "ageClass3","ageClass8")
 names(ITHIMageKey2) <- unique(pop14$WONDERage)
 pop14$ITHIMage <- ITHIMageKey2[as.character(pop14$WONDERage)]
 ```
 
-```{r foop, eval = TRUE}
+```{r foop, eval = FALSE}
 pop14 <-  pop14[, c("HHSRegionCode","gender","ITHIMage","deaths2014AllCause","population2014")]
 pop14$deaths2014 <- as.numeric(ifelse(pop14$deaths2014 == "Suppressed", sample(0:9), as.numeric(as.character(pop14$deaths2014))))
 
@@ -279,7 +282,7 @@ HHSmetroCauseSpecific <- merge(wonderSummary, popSummary)
 
 Presumably this comes from an EXCEL file.
 
-```{r USGBD, eval = TRUE}
+```{r USGBD, eval = FALSE}
 USGBD <- read.csv("./../data/CDCwonder/USGBD.csv", header=T)
 USGBD$ITHIMage <- as.character(USGBD$ITHIMage)
 USGBD$ITHIMcause <- as.character(USGBD$ITHIMcause)
@@ -303,7 +306,7 @@ burdenOut <- burdenOut[,c("HHS", "disease","sex","dproj","yll","yld","daly")]
 
 Now we create an R list of GBD objects named by HHS region.
 
-```{r burdenList, eval = TRUE}
+```{r burdenList, eval = FALSE}
 GBDList <- lapply(split(burdenOut, burdenOut$HHS),function(x) lapply(split(x, x$disease), function(x) split(x, x$sex)))
 #saveRDS(GBDList, file = "../data/GBD.rds")
 ```
@@ -395,49 +398,57 @@ METmatrix <- rbind(matrix(0,nrow = 2, ncol = 2), matrix(parameters$mean, ncol = 
 
 ## Create List of ITHIM Objects
 
-```{r ITHIMObjs, eval = TRUE}
 
-ITHIMList <- list()
-
-ITHIM.default <- createITHIM(vision = "baseline", region = "national")
-
-for (HHS in paste0("HHS",1:10)){
-  ITHIMList[[HHS]] <- ITHIM.default
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muwt", muwtList[[HHS]])
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muct", muctList[[HHS]])
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "Rwt", RwtList[[HHS]])
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "Rct", RctList[[HHS]])
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "GBD", GBDList[[HHS]])
-  ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muNonTravel", 15)
-}
-
-saveRDS(ITHIMList, file = "./data/ITHIMList.rds")
-
-```
-
-```{r readRDS, eval = TRUE}
-ITHIMlist <- readRDS(file = "./data/ITHIMList.rds")
-```
-
-```{r fooba}
+```{r foobar, eval = TRUE}
 sumDALY <- function(ITHIM.baseline, ITHIM.scenario){
     return(sum(unlist(compareModels(ITHIM.baseline, ITHIM.scenario)$daly.delta)))
     }
 ```
 
-```{r sumDALY}
-ITHIM.national <- createITHIM(vision = "baseline", region = "national")
-ITHIM.national <- updateITHIM(ITHIM.national, "muNonTravel", 15)
-ITHIM.national <- updateITHIM(ITHIM.national, "muwt", 49.63)
-ITHIM.national <- updateITHIM(ITHIM.national, "muct", 2.50)
-DALYs <- lapply(ITHIMList, sumDALY, ITHIM.baseline = ITHIM.national)
+```{r ITHIMObjs, eval = TRUE, fig.width = 20, fig.height = 10}
+compute <- FALSE
+
+if(compute){
+
+DALYsTotal <- data.frame()
+
+for( muNonTravel in seq(1,75,length.out = 20) ){
+
+  ITHIMList <- list()
+  rm(DALYs)
+  ITHIM.default <- createITHIM(vision = "baseline", region = "national")
+
+  for (HHS in paste0("HHS",1:10)){
+    ITHIMList[[HHS]] <- ITHIM.default
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muwt", muwtList[[HHS]])
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muct", muctList[[HHS]])
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "Rwt", RwtList[[HHS]])
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "Rct", RctList[[HHS]])
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "GBD", GBDList[[HHS]])
+    ITHIMList[[HHS]] <- updateITHIM(ITHIMList[[HHS]], "muNonTravel", muNonTravel)
+  }
+
+  ITHIM.national <- createITHIM(vision = "baseline", region = "national")
+  ITHIM.national <- updateITHIM(ITHIM.national, "muNonTravel", muNonTravel)
+  ITHIM.national <- updateITHIM(ITHIM.national, "muwt", 49.63)
+  ITHIM.national <- updateITHIM(ITHIM.national, "muct", 2.50)
+  DALYs <- lapply(ITHIMList, sumDALY, ITHIM.baseline = ITHIM.national)
+  DALYs <- data.frame(HHS = names(DALYs), muNonTravel = muNonTravel, DALY = unlist(DALYs))
+  DALYsTotal <- rbind(DALYsTotal, DALYs)
+}
+}else{
+DALYsTotal <- readRDS(file = "./data/DALYsTotal.rds")
+}
+p <- ggplot(DALYsTotal, aes(x = muNonTravel, y = DALY, colour = HHS))
+p  + geom_line() + theme_bw() + scale_x_discrete(name="Non-Travel METs mean") + scale_y_continuous(name="Change in DALY (National)") + facet_grid(. ~ HHS)
 ```
 
 ### Visualization of trip time matrices
 
-```{r eval = TRUE}
+```{r meanMatrices, eval = TRUE, fig.width = 20, fig.height = 10, warning = FALSE, message = FALSE}
 
-ITHIMList <- c(ITHIMList, list(ITHIM.national))
+
+ITHIMList <- c(ITHIMList, list("Natl" = ITHIM.national))
 
 meanMatrix <- function(ITHIM, mode = "walk"){
    if(mode == "walk"){
@@ -453,6 +464,8 @@ meanMatrixListCycle <- lapply(ITHIMList, meanMatrix, mode = "cycle")
 D <- melt(c(meanMatrixListWalk,meanMatrixListCycle))
 
 names(D) <- c("ageClass", "mode", "sex", "time", "HHS")
+
+#D <- within(D, HHS <- factor(HHS, levels = c(paste0("HHS",1:10),"Natl")))
 
 p1 <- ggplot(D, aes(x = ageClass, y = time, fill = sex)) + geom_bar(stat= "identity", position = "dodge") + facet_grid( mode ~ HHS)
 
