eval = TRUE for whole script

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -35,7 +35,7 @@ First we use NHTS to estimate mean walking and cycling times.
 
 #### Create a handful of functions to help parse data
 
-```{r parsely, eval = FALSE}
+```{r parsely, eval = TRUE}
 convertToHHS <- function(states){
   HHSRegions <- matrix(c("CT","ME","MA","NH","RI","VT","NJ","NY","DE","DC","MD","PA","VA","WV","AL","FL","GA","KY","MS","NC","SC","TN","IL","IN","MI","MN","OH","WI","AR","LA","NM","OK","TX","IA","KS","MO","NE","CO","MT","ND","SD","UT","WY","AZ","CA","HI","NV","AK","ID","OR","WA",1,1,1,1,1,1,2,2,3,3,3,3,3,3,4,4,4,4,4,4,4,4,5,5,5,5,5,5,6,6,6,6,6,7,7,7,7,8,8,8,8,8,8,9,9,9,9,10,10,10,10,"HHS1","HHS1","HHS1","HHS1","HHS1","HHS1","HHS2","HHS2","HHS3","HHS3","HHS3","HHS3","HHS3","HHS3","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS4","HHS5","HHS5","HHS5","HHS5","HHS5","HHS5","HHS6","HHS6","HHS6","HHS6","HHS6","HHS7","HHS7","HHS7","HHS7","HHS8","HHS8","HHS8","HHS8","HHS8","HHS8","HHS9","HHS9","HHS9","HHS9","HHS10","HHS10","HHS10","HHS10"), nrow = 51, ncol = 3)
   StateToHHS <- HHSRegions[,3]
@@ -61,7 +61,7 @@ return(foo[,c("M","F")])
 
 #### Read Two of the Four NHTS Data Tables
 
-```{r NHTS, eval = FALSE}
+```{r NHTS, eval = TRUE, echo = FALSE}
 DAYV2PUB <- read.csv(file = "~/GHI/data/NHTS/Ascii/DAYV2PUB.CSV", na.strings = c("-9","-8", "-7", "-1"))
 names(DAYV2PUB) <- c("HOUSEID","PERSONID","FRSTHM","OUTOFTWN","ONTD_P1","ONTD_P2","ONTD_P3","ONTD_P4","ONTD_P5","ONTD_P6","ONTD_P7","ONTD_P8","ONTD_P9","ONTD_P10","ONTD_P11","ONTD_P12","ONTD_P13","ONTD_P14","ONTD_P15","TDCASEID","HH_HISP","HH_RACE","DRIVER","R_SEX","WORKER","DRVRCNT","HHFAMINC","HHSIZE","HHVEHCNT","NUMADLT","FLAG100","LIF_CYC","TRIPPURP","AWAYHOME","CDIVMSAR","CENSUS_D","CENSUS_R","DROP_PRK","DRVR_FLG","EDUC","ENDTIME","HH_ONTD","HHMEMDRV","HHRESP","HHSTATE","HHSTFIPS","INTSTATE","MSACAT","MSASIZE","NONHHCNT","NUMONTRP","PAYTOLL","PRMACT","PROXY","PSGR_FLG","R_AGE","RAIL","STRTTIME","TRACC1","TRACC2","TRACC3","TRACC4","TRACC5","TRACCTM","TRAVDAY","TREGR1","TREGR2","TREGR3","TREGR4","TREGR5","TREGRTM","TRPACCMP","TRPHHACC","TRPHHVEH","TRPTRANS","TRVL_MIN","TRVLCMIN","TRWAITTM","URBAN","URBANSIZE","URBRUR","USEINTST","USEPUBTR","VEHID","WHODROVE","WHYFROM","WHYTO","WHYTRP1S","WRKCOUNT","DWELTIME","WHYTRP90","TDTRPNUM","TDWKND","TDAYDATE","TRPMILES","WTTRDFIN","VMT_MILE","PUBTRANS","HOMEOWN","HOMETYPE","HBHUR","HTRESDN","HTHTNRNT","HTPPOPDN","HTEEMPDN","HBRESDN","HBHTNRNT","HBPPOPDN","GASPRICE","VEHTYPE","HH_CBSA","HHC_MSA")
 
@@ -108,14 +108,14 @@ saveRDS(NHTS.trips, file = "./data/NHTS.trips.rds")
 saveRDS(NHTS.person, file = "./data/NHTS.person.rds")
 ```
 
-```{r loadData, eval = FALSE}
+```{r loadData, eval = FALSE, echo = FALSE}
 NHTS.person <- readRDS(file = "./data/NHTS.person.rds")
 NHTS.trips <- readRDS(file = "./data/NHTS.trips.rds")
 ```
 
 #### Investigate Trip Data
 
-```{r summary, fig.width = 20, fig.height = 10, eval = TRUE}
+```{r summary, fig.width = 20, fig.height = 10, eval = TRUE, echo = FALSE}
 summary(with(subset(NHTS.trips, AT == "walk"), TRPMILES))
 summary(with(subset(NHTS.trips, AT == "cycle"), TRPMILES))
 summary(with(subset(NHTS.trips, AT == "other"), TRPMILES))
@@ -163,7 +163,7 @@ g
 
 #### Subset and Merge
 
-```{r subset, eval = TRUE, fig.width = 10}
+```{r subset, eval = TRUE, fig.width = 10, echo = FALSE}
 NHTS.person <- subset( NHTS.person, MSA == TRUE )
 NHTS <- merge(NHTS.person, NHTS.trips, by = c("HOUSEID","PERSONID"))
 barplot(with(NHTS,table(HHS)))
@@ -171,13 +171,13 @@ barplot(with(NHTS,table(HHS)))
 
 #### Split into strata by region
 
-```{r split, eval = FALSE}
+```{r split, eval = TRUE, echo = FALSE}
 listOfLists <- lapply(split(NHTS, NHTS$HHS),function(x) lapply(split(x, x$SEX), function(x) split(x, x$AGE)))
 ```
 
 #### Compute Mean Trip Lengths
 
-```{r count, eval = FALSE}
+```{r count, eval = TRUE, echo = FALSE}
 counts <- lapply(listOfLists, function(x) lapply(x, function(x) lapply(x, countPeople)))
 walkLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "walk")))
 cycleLength <- lapply(listOfLists, function(x) lapply(x, function(x) lapply( x, tripTime, mode = "cycle")))
@@ -202,7 +202,7 @@ The data files in ~/Box Sync/work/CoBenefits/MaggieShare/VitalStats/CDCwonder/.
 
 #### Query Results File (HHSmetro_Age_sex_2010-14.csv)
 
-```{r CDC, eval = FALSE}
+```{r CDC, eval = TRUE, echo = FALSE}
 wonder <- read.csv("./../data/CDCwonder/HHSmetro_Age_sex_2010-14.csv", header=T)
 names(wonder) <- c("HHSRegion", "HHSRegionCode", "gender", "genderCode","WONDERage","WONDERageCode","ICD10",  "ICD10Code", "deaths5yr", "population5yr", "crudeRate")
 
@@ -212,12 +212,12 @@ wonder <- subset(wonder, WONDERageCode != "NS") # remove 'Not stated' Age entrie
 The following two recoding chunks should probably be redone.  They
 depend on the ordering of the factors which seems dangerous.
 
-```{r ITHIMCause, eval = FALSE}
+```{r ITHIMCause, eval = TRUE, echo = FALSE}
 ITHIMcauseKey <- c("ColonCancer","LungCancer","BreastCancer","Diabetes","Dementia","IHD","InflammatoryHD","InflammatoryHD","HHD","Stroke","AcuteRespInfections","AcuteRespInfections","RespiratoryDisease","RespiratoryDisease","RTIs","RTIs")
 names(ITHIMcauseKey) <- unique(wonder$ICD10)
 wonder$ITHIMcause <- ITHIMcauseKey[as.character(wonder$ICD10)]
 ```
-```{r recodeAge, eval = FALSE}
+```{r recodeAge, eval = TRUE, echo = FALSE}
 ITHIMageKey <- c("ageClass1", "ageClass1", "ageClass2", "ageClass2", "ageClass3", "ageClass3", "ageClass3", "ageClass4", "ageClass4", "ageClass4", "ageClass5", "ageClass5", "ageClass5", "ageClass6", "ageClass6", "ageClass7", "ageClass7", "ageClass8", "ageClass8","ageClass8", "ageClass8", "ageClass8")
 names(ITHIMageKey) <- unique(wonder$WONDERage)
 wonder$ITHIMage <- ITHIMageKey[as.character(wonder$WONDERage)]
@@ -225,7 +225,7 @@ wonder$ITHIMage <- ITHIMageKey[as.character(wonder$WONDERage)]
 
 Depression was not in the WONDER data, since there are no deaths, have to add it manually.
 
-```{r wonder, eval = FALSE}
+```{r wonder, eval = TRUE, echo = FALSE}
 wonder <- wonder[, c("HHSRegionCode","gender","ITHIMage","ITHIMcause","deaths5yr","population5yr")]
 depress <- expand.grid(HHSRegionCode=unique(wonder$HHSRegionCode), gender=unique(wonder$gender),ITHIMage = unique(wonder$ITHIMage), ITHIMcause = "Depression", deaths5yr = "0", population5yr = "0", stringsAsFactors=T)
 wonder <- rbind(wonder, depress)
@@ -233,7 +233,7 @@ wonder <- rbind(wonder, depress)
 
 Replace suppressed values with random number 1-9
 
-```{r suppressed, eval = FALSE}
+```{r suppressed, eval = TRUE, echo = FALSE}
 wonder <- within( wonder, {
     newDeaths <- as.numeric(ifelse(deaths5yr == "Suppressed", sample(0:9), as.numeric(as.character(deaths5yr))))
     })
@@ -241,7 +241,7 @@ wonder <- within( wonder, {
 
 10 HHS x 2 sex x 8 age x 13 disease = 2,080 strata.
 
-```{r summary2, eval = FALSE}
+```{r summary2, eval = TRUE, echo = FALSE}
 wonderSummary <- ddply(wonder, .(HHSRegionCode, gender, ITHIMage, ITHIMcause), summarise,
                        numberOfDeaths5yr = sum(as.numeric(as.character(newDeaths)), na.rm=T)
 )
@@ -253,7 +253,7 @@ Read in data for single year population.  Processed in Excel, to
 combine two WONDER queries, need to go back and script the processing
 of the raw WONDER output
 
-```{r singleyear, eval = FALSE}
+```{r singleyear, eval = TRUE, echo = FALSE}
 pop14 <- read.csv("./../data/CDCwonder/HHSmetro_Age_sex_2014_AllCause.csv", header=T)
 
 
@@ -261,13 +261,13 @@ names(pop14) <- c("HHSRegion", "HHSRegionCode","gender", "genderCode","WONDERage
 ```
 This is delicate(read sloppy), really need to check the order of age groups returned by the 'unique(pop14$WONDERage)' command.
 
-```{r sloppy, eval = FALSE}
+```{r sloppy, eval = TRUE, echo = FALSE}
 ITHIMageKey2 <- c("ageClass8", "ageClass1", "ageClass7", "ageClass7", "ageClass6", "ageClass6", "ageClass1", "ageClass5", "ageClass5","ageClass5","ageClass4", "ageClass3", "ageClass4", "ageClass2", "ageClass2", "ageClass3", "ageClass4", "ageClass3","ageClass8")
 names(ITHIMageKey2) <- unique(pop14$WONDERage)
 pop14$ITHIMage <- ITHIMageKey2[as.character(pop14$WONDERage)]
 ```
 
-```{r foop, eval = FALSE}
+```{r foop, eval = TRUE, echo = FALSE}
 pop14 <-  pop14[, c("HHSRegionCode","gender","ITHIMage","deaths2014AllCause","population2014")]
 pop14$deaths2014 <- as.numeric(ifelse(pop14$deaths2014 == "Suppressed", sample(0:9), as.numeric(as.character(pop14$deaths2014))))
 
@@ -282,7 +282,7 @@ HHSmetroCauseSpecific <- merge(wonderSummary, popSummary)
 
 Presumably this comes from an EXCEL file.
 
-```{r USGBD, eval = FALSE}
+```{r USGBD, eval = TRUE, echo = FALSE}
 USGBD <- read.csv("./../data/CDCwonder/USGBD.csv", header=T)
 USGBD$ITHIMage <- as.character(USGBD$ITHIMage)
 USGBD$ITHIMcause <- as.character(USGBD$ITHIMcause)
@@ -306,14 +306,14 @@ burdenOut <- burdenOut[,c("HHS", "disease","sex","dproj","yll","yld","daly")]
 
 Now we create an R list of GBD objects named by HHS region.
 
-```{r burdenList, eval = FALSE}
+```{r burdenList, eval = TRUE, echo = FALSE}
 GBDList <- lapply(split(burdenOut, burdenOut$HHS),function(x) lapply(split(x, x$disease), function(x) split(x, x$sex)))
 #saveRDS(GBDList, file = "../data/GBD.rds")
 ```
 
 ## Non-Travel METs
 
-```{r newMETs, echo = TRUE, eval = FALSE}
+```{r newMETs, echo = TRUE, eval = TRUE, echo = FALSE}
 newMETsFile <- "~/GHI/data/ATUS/ATUS_to_METS_key.csv"
 newMETs <- read.csv(file = newMETsFile, stringsAsFactors = FALSE, colClasses = c("character","character","character","character","numeric","character","character","character"))
 dataColumns <- c(1,5)
@@ -335,7 +335,7 @@ names(metKey) <- activityCode
 
 ```
 
-```{r readnewMETs, echo = TRUE, eval = FALSE}
+```{r readnewMETs, echo = TRUE, eval = TRUE, echo = FALSE}
 cpsFile <- "~/GHI/data/ATUS/atuscps_0311.dat"
 cps <- read.table(cpsFile, header=T, skip=0, sep="," )
 cps <- within(cps, {
@@ -366,7 +366,7 @@ summaryList$metaData <- within(summaryList$metaData,{
 
 We shift the MET estimates by the minimum value so that the new minimum MET estimate is zero.
 
-```{r metKey, echo = TRUE, eval = FALSE}
+```{r metKey, echo = TRUE, eval = TRUE, echo = FALSE}
 allActivities <- colnames(summaryList$Data)
 nonTravelActivities <- rownames(newMETs$metaData)[which(newMETs$metaData$Travel.related..Y.N. == "N")]
 nonTravelActivities <- nonTravelActivities[which(nonTravelActivities %in% allActivities)]
@@ -386,7 +386,7 @@ ggplot(D, aes(x = METs, ..density.., colour = AGECAT)) + geom_freqpoly(binwidth 
 
 ```
 
-```{r parameters, eval = FALSE}
+```{r parameters, eval = TRUE, echo = FALSE}
 (parameters <- ddply(D, .(SEX, AGECAT), summarise,
              mean = mean(METs, na.rm=T),
              sd = sd(METs, na.rm=T)
@@ -399,14 +399,14 @@ METmatrix <- rbind(matrix(0,nrow = 2, ncol = 2), matrix(parameters$mean, ncol = 
 ## Create List of ITHIM Objects
 
 
-```{r foobar, eval = TRUE}
+```{r foobar, eval = TRUE, echo = FALSE}
 sumDALY <- function(ITHIM.baseline, ITHIM.scenario){
     return(sum(unlist(compareModels(ITHIM.baseline, ITHIM.scenario)$daly.delta)))
     }
 ```
 
-```{r ITHIMObjs, eval = TRUE, fig.width = 20, fig.height = 10}
-compute <- FALSE
+```{r ITHIMObjs, eval = TRUE, fig.width = 20, fig.height = 10, echo = FALSE}
+compute <- TRUE
 
 if(compute){
 
@@ -445,7 +445,7 @@ p  + geom_line() + theme_bw() + scale_x_discrete(name="Non-Travel METs mean") + 
 
 ### Visualization of trip time matrices
 
-```{r meanMatrices, eval = TRUE, fig.width = 20, fig.height = 10, warning = FALSE, message = FALSE}
+```{r meanMatrices, eval = TRUE, fig.width = 20, fig.height = 10, warning = FALSE, message = FALSE, echo = FALSE}
 
 
 ITHIMList <- c(ITHIMList, list("Natl" = ITHIM.national))
@@ -474,7 +474,7 @@ p1
 ```
 
 
-```{r CRA, eval = TRUE}
+```{r CRA, eval = TRUE, echo = FALSE}
 
 CRA.fn <- function(i, j){
   foo <- compareModels( ITHIMList[[i]], ITHIMList[[j]])
@@ -497,6 +497,7 @@ which(CRAMatrix == max(CRAMatrix), arr.ind = TRUE)
 
 ## DETAILS ON WONDER QUERY
 
+```
 Dataset: Underlying Cause of Death, 1999-2014
 Query Parameters:
 Title: ITHIM2014_HHS_urb_age_sex_16years
@@ -584,87 +585,88 @@ infant age groups are the number of live births. <br/><b>Note:</b> Rates and pop
 slightly from previously published reports, due to use of the population estimates which were available at the time of release.
 10. The population figures used in the calculation of death rates for the age group 'under 1 year' are the estimates of the
 resident population that is under one year of age. More information: http://wonder.cdc.gov/wonder/help/ucd.html#Age Group.
+```
 
 ## Example (Bay Area)
 
 First we define the baseline and scenario objects.
 
-```{r instantiate, eval = FALSE}
+```{r instantiate, eval = TRUE, echo = FALSE}
 ITHIM.baseline <- createITHIM(vision = "baseline", region = "SFBayArea")
 ITHIM.scenario <- createITHIM(vision = "scenario", region = "SFBayArea")
 ```
 
 Next we compare the scenario to the baseline using compareModels().
 
-```{r RRs, eval = FALSE}
+```{r RRs, eval = TRUE, echo = FALSE}
 comparativeRisk <- compareModels(ITHIM.baseline,ITHIM.scenario)
 ```
 
 ### Deaths
-```{r show, echo = FALSE, eval = FALSE}
+```{r show, echo = FALSE, eval = TRUE, echo = FALSE}
 matrix(unlist(lapply(comparativeRisk$dproj.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 ### DALY
-```{r show2, echo = FALSE, eval = FALSE}
+```{r show2, echo = FALSE, eval = TRUE, echo = FALSE}
 matrix(unlist(lapply(comparativeRisk$daly.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 ### YLD
-```{r show3, echo = FALSE, eval = FALSE}
+```{r show3, echo = FALSE, eval = TRUE, echo = FALSE}
 matrix(unlist(lapply(comparativeRisk$yld.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 ### YLL
-```{r show4, echo = FALSE, eval = FALSE}
+```{r show4, echo = FALSE, eval = TRUE, echo = FALSE}
 matrix(unlist(lapply(comparativeRisk$yll.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 
 ## Example (National)
 
-```{r instantiate2, eval = FALSE}
+```{r instantiate2, eval = TRUE, echo = FALSE}
 ITHIM.baseline <- createITHIM(vision = "baseline", region = "national")
 ITHIM.scenario <- createITHIM(vision = "scenario", region = "national")
 ```
 
-```{r RRs2, eval = FALSE}
+```{r RRs2, eval = TRUE, echo = FALSE}
 comparativeRisk <- compareModels(ITHIM.baseline,ITHIM.scenario)
 ```
 
 ### Deaths
-```{r show222, echo = FALSE, eval = FALSE}
+```{r show222, echo = FALSE, eval = TRUE}
 matrix(unlist(lapply(comparativeRisk$dproj.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 ### DALY
-```{r show22, echo = FALSE, eval = FALSE}
+```{r show22, echo = FALSE, eval = TRUE}
 matrix(unlist(lapply(comparativeRisk$daly.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 ### YLD
-```{r show23, echo = FALSE, eval = FALSE}
+```{r show23, echo = FALSE, eval = TRUE}
 matrix(unlist(lapply(comparativeRisk$yld.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 #### YLL
-```{r show24, echo = FALSE, eval = FALSE}
+```{r show24, echo = FALSE, eval = TRUE}
 matrix(unlist(lapply(comparativeRisk$yll.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 
 ## Example
 
-```{r example, eval = FALSE}
+```{r example, eval = TRUE, echo = FALSE}
 example("ITHIM-package")
 ```
 
 ### Creating Different Visions
 
-```{r vision, eval = FALSE}
+```{r vision, eval = TRUE, echo = FALSE}
 ITHIM.vision <- updateITHIM(ITHIM.scenario, "muwt", 2*ITHIM.scenario$parameters$muwt) # Double the mean walking time
 comparativeRisk <- compareModels(ITHIM.baseline,ITHIM.vision)
 ```
 #### YLL
-```{r show233, echo = FALSE, eval = FALSE}
+```{r show233, echo = FALSE, eval = TRUE}
 matrix(unlist(lapply(comparativeRisk$yll.delta,function(x) lapply(x, function(x) sum(x[-(1:2)]) ))),nrow=5,ncol=2,byrow=TRUE,dimnames=list(names(comparativeRisk$dproj.delta),c("M","F")))
 ```
 
 ## Interrogate Parameters
 
-```{r params, eval = FALSE}
+```{r params, eval = TRUE, echo = FALSE}
 names(ITHIM.baseline$parameters)
 ITHIM.baseline$parameters$NonTravelMETs
 ITHIM.baseline$parameters$Rwt
